Fix button display on smaller screens

--- a/_assets/sass/components/_buttons.scss
+++ b/_assets/sass/components/_buttons.scss
@@ -1,8 +1,12 @@
 .btn-outline-brand {
   @include button-outline-variant($t-button-color, $color--white);
   @include font-weight-bold;
-  padding: 18px 68px 15px;
+  padding: 18px 32px 15px;
   border-color: $color--light-iron;
   font-size: 18px;
   text-decoration: none;
+
+  @include media('>=tablet') {
+    @include padding(null 68px);
+  }
 }
